day 20 Apache POI reading data from excel file for DDT

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,16 @@
             <artifactId>extentreports</artifactId>
             <version>4.0.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
