--- a/configuration.properties
+++ b/configuration.properties
@@ -3,7 +3,10 @@
 browser=chrome
 
 #URL OF OUR WEB APPLICATION
-url=https://qa2.vytrack.com/
+url=https://qa1.vytrack.com/
+env_url2=https://qa2.vytrack.com/
+env_url3="https://qa3.vytrack.com/
+
 
 #CREDENTIALS
 user_name=storemanager85
